# docs/api/openapi.json
@@ -243,6 +243,12 @@
     "/api/booking/quote": {
       "POST": {}
     },
+    "/api/booking/recover-payment/{token}": {
+      "GET": {}
+    },
+    "/api/booking/recover-payment/{token}/bank-transfer": {
+      "POST": {}
+    },
     "/api/booking/reservations": {
       "POST": {}
     },
